# AI-Powered-Requirements-Analysis-Platform

./: .env.example  .gitignore  Dockerfile  ENHANCEMENT_PLAN.md  IMPLEMENTATION_ROADMAP.md  NEXT_STEPS.md  README.md  cloudbuild.yaml  pyproject.toml
src/: __init__.py  config.py  main.py
src/api/routes/: conflicts.py  documents.py  extraction.py  rag.py  stories.py
src/audit/: __init__.py  logging.py
src/collaboration/: __init__.py  versioning.py
src/document_processing/: __init__.py  chunking.py  loader.py  pipeline.py
src/embeddings/: __init__.py  generator.py
src/extractors/: __init__.py  conflicts.py  requirements.py  stories.py  transcript_processor.py
src/ml/: __init__.py  conflict_classifier.py
src/monitoring/: __init__.py  metrics.py
src/prioritization/: __init__.py  frameworks.py
src/prompts/: __init__.py  conflicts.py  extraction.py  stories.py
src/quality/: __init__.py  metrics.py
src/rag/: __init__.py  hybrid_retrieval.py  pipeline.py  reranker.py
src/security/: __init__.py  rbac.py
src/traceability/: __init__.py  matrix.py
src/vectorstore/: __init__.py  pinecone_store.py
tests/: conftest.py  test_api_routes.py  test_document_processing.py
