[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "requirements-analysis-platform"
version = "0.1.0"
description = "AI-Powered Requirements Analysis Platform using LangChain, OpenAI, and Pinecone"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Requirements Analysis Team" }
]

dependencies = [
    # Web Framework
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "gunicorn>=21.2.0",
    "python-multipart>=0.0.6",
    
    # LangChain & AI
    "langchain>=0.1.0",
    "langchain-openai>=0.0.5",
    "langchain-community>=0.0.20",
    "langchain-pinecone>=0.0.3",
    "openai>=1.10.0",
    
    # Vector Database
    "pinecone-client>=3.0.0",
    
    # Document Processing
    "pypdf>=4.0.0",
    "unstructured[pdf]>=0.12.0",
    "tiktoken>=0.6.0",
    
    # Data Validation & Settings
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    
    # Utilities
    "python-dotenv>=1.0.0",
    "structlog>=24.1.0",
    "httpx>=0.26.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.2.0",
    "mypy>=1.8.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --tb=short"
markers = [
    "integration: marks tests as integration tests",
    "slow: marks tests as slow",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
